Assets/style.css
* {
  box-sizing: border-box; 
  
}

:root {
  --aquamarine: #86e7b8;
  --mintgreen: #93ff96;
  --lightgreen: #b2ffa8;
  --teagreen: #d0ffb7;
  --beige: #f2f5de;
  --onyx: #393e41;
  --buttongreen: #4CAF50;
}

body {
  background-color: var(--beige);
  font-family: sans-serif;
  color: var(--onyx);
}

.subnav-hero-section {
  text-align: center;
  background: linear-gradient(to right, var(--aquamarine), var(--lightgreen));
  background-size: cover;
  position: relative;
  overflow: visible;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 200px;
  margin: -30px;
}
  
  .subnav-hero-section .subnav-hero-headline {
    color: #fefefe;
  }
  
  .subnav-hero-subnav {
    float: none;
    position: absolute;
    text-align: center;
    margin: 0 auto;
    bottom: 0;
    width: 100%;
  }
  
  .subnav-hero-subnav li {
    float: none;
    display: inline-block;
  }
  
  .subnav-hero-subnav li a {
    padding: 0.9rem 1rem;
    font-size: 1rem;
    color: #fefefe;
    text-transform: uppercase;
    display: block;
    font-weight: bold;
    letter-spacing: 1px;
    transition: all 0.35s ease-in-out;
  }

  .subnav-hero-subnav li a:hover {
    background-color: aquamarine;
  }

 .food-image img {
   display: flex;
   height: 100px;
   padding-left:50px;
 }
 
 .exercise-image img {
   display: flex;
   float: left;
   height: 100px;
   padding-right: 50px;
  
 }
  
  input[type=text],
  select,
  textarea,
  input[type=email],
  input[type=number] {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
  }
  
  input[type=submit] {
    background-color: #4CAF50;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }
  
  input[type=submit]:hover {
    background-color: #45a049;
  }

  input[type=submit]:active {
    background-color: #3e8e41;
    box-shadow: 0 5px #666;
    transform: translateY(4px);
  }

  form a {
    background-color: #4CAF50;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }

  .page-container {
    display: flex;
    align-items: center;
  }
  
  .container-index {
    border-radius: 5px;
    background-color: #f2f2f2;
    margin-top: -90px;
    margin-left: 10px;
    padding: 20px;
    width: 100%;
    max-width: 30%;
  } 
 
  .welcome {
    float: right;
    display: flex;
    flex-wrap: wrap;
    position: relative;
    margin-left: 5%;
    margin-top: 10px;
    width: 50%;
  
  }

  .welcome p {
    font-size: 1.2rem;
  }

  footer {
    display: flex;
    position: relative;
    justify-content: center;
    margin-top: 10%;
    font-size: 2rem;
  }

  /*/////////////////////// Login HTML //////////////////////*/

  .login {
    display: flex;
    flex-direction: column;
    width: 100%;
    
     
  }

  .login form {
    width: 20%;
    align-items: center;
    margin-left: 40%;
    margin-top: 2%;
  } 

   .perks {
     display: flex;
     flex-direction: column;
     margin-top: 2%;
     margin-left: 30%;
   }

   .perks h2{
     margin-left: 16%;
  }
 

   /* ///////////////////// Exercise HTML ///////////////////////// */

   .exercise-input {
     display: flex;
     align-items: center;
     margin-top: 2%;
   }

   .exercise-form {
     display: flex;
     align-items: center;
   }

   .exercise-input form {
     display: flex;
     width: 25%;
     margin-left: 10px;
   }

   .exercise-input input[type=submit]:active {
    background-color: #3e8e41;
    box-shadow: 0 5px #666;
    transform: translateY(4px);
  }

  #append-exercise {
    display: inline-block;
    width: 100%;
    margin-top: 10px;
    background-color: var(--teagreen);
    border: dotted 2px var(--onyx);
    padding-left: 5px;
    padding-right: 5px;
  }


   /* ///////////////////////////// Meals HTML ////////////////////////////////////*/

  .meal-search-form {
    display: flex;
    width: 40%;
    margin-left: 5%;
    margin-top: 2%;
  }

  .meal-search-form button {
    background-color: var(--buttongreen);
  border-radius: 10px;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  }

  .meal-search-form button:hover {
    background-color: var(--aquamarine);
  }

  .meal-search-form button:active {
    background-color: #3e8e41;
    box-shadow: 0 5px #666;
    transform: translateY(4px);
  }

#appended-meals {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  font: 1em sans-serif;
}

#appended-meals div {
  display: flex;
  flex-direction: column;
  width: 50%;
  align-items: center;
}

